# unspsc-python

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_db.py
tests/: test_lookup.py
unspsc/: __init__.py  _db.py  _lookup.py  _match.py  _models.py  cli.py
