[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unspsc-python"
version = "0.1.0"
description = "UNSPSC v26.0801 lookup, hierarchy traversal, and fuzzy matching for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kundan Sharma", email = "kundanshar@gmail.com" }]
keywords = ["unspsc", "procurement", "spend-classification", "erp", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
dev = ["pytest>=7", "rapidfuzz>=3.0", "openpyxl>=3.1"]

[project.scripts]
unspsc = "unspsc.cli:main"

[project.urls]
Homepage = "https://github.com/kundanshar-cell/unspsc-python"
Repository = "https://github.com/kundanshar-cell/unspsc-python"
Issues = "https://github.com/kundanshar-cell/unspsc-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["unspsc"]
artifacts = ["data/unspsc.db.gz"]

[tool.hatch.build.targets.sdist]
include = ["unspsc/", "data/unspsc.db.gz", "scripts/", "tests/", "README.md"]
